--- a/ErasmusWebiste/style.css
+++ b/ErasmusWebiste/style.css
@@ -1,8 +1,8 @@
 body {
-    background-color: #f0f0f0;
-    font-family: 'Courier New', Courier, monospace;
-    margin: 0;
-    padding: 0;
+  background-color: #f0f0f0;
+  font-family: 'Courier New', Courier, monospace;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -18,7 +18,9 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 65px;
+    height: 100px;
+    z-index: 9998;
+    overflow: visible;
 }
 
 header a {
@@ -27,7 +29,7 @@ header a {
 }
 
 button {
-    background-color: rgb(92, 231, 178);
+    background-color: rgb(100, 100, 100);
     border: none;
     border-radius: 10px;
     font-size: 18px;
@@ -105,31 +107,35 @@ button[type="submit"] {
 input[type="text"] {
     padding: 10px;
     width: 60%;
+    height: 22px;
     margin-right: 5px;
 }
 
 .navbar {
-    overflow: hidden;
+    overflow: visible;
     background-color: rgb(100, 100, 100);
-    position: relative; /* Allows positioning of dropdown */
+    position: absolute;
+    z-index: 9999;
   }
   
   .navbar a {
     float: left;
-    font-size: 16px;
+    font-size: 30px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    min-width: 100px;
   }
   
   .dropdown {
     float: left;
     overflow: hidden;
+    z-index: 10000;
   }
   
   .dropdown .dropbtn {
-    font-size: 16px;  
+    font-size: 30px;  
     border: none;
     outline: none;
     color: white;
@@ -137,19 +143,22 @@ input[type="text"] {
     background-color: inherit;
     font-family: inherit;
     margin: 0;
+    z-index: 10000;
+    border-radius: 5px;
   }
   
   .navbar a:hover, .dropdown:hover .dropbtn {
     background-color: red;
+    z-index: 10000;
   }
   
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: rgb(236, 236, 236);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 10001;
   }
   
   .dropdown-content a {
@@ -159,13 +168,17 @@ input[type="text"] {
     text-decoration: none;
     display: block;
     text-align: left;
+    z-index: 10000;
   }
   
   .dropdown-content a:hover {
     background-color: #ddd;
+    z-index: 10001;
   }
   
   .dropdown:hover .dropdown-content {
     display: block;
+    z-index: 10002;
   }
+  
   
