--- a/ErasmusWebiste/style.css
+++ b/ErasmusWebiste/style.css
@@ -156,7 +156,8 @@ input[type="text"] {
     display: none;
     position: absolute;
     background-color: rgb(236, 236, 236);
-    min-width: 160px;
+    min-width: 200px;
+    border-radius: 10px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 10001;
   }
@@ -173,6 +174,7 @@ input[type="text"] {
   
   .dropdown-content a:hover {
     background-color: #ddd;
+    border-radius: 15px;
     z-index: 10001;
   }
   
