--- a/ErasmusWebiste/style.css
+++ b/ErasmusWebiste/style.css
@@ -1,3 +1,4 @@
+/* General Styles */
 body {
   background-color: #f0f0f0;
   font-family: 'Courier New', Courier, monospace;
@@ -6,181 +7,262 @@ body {
 }
 
 img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-/* Header styling */
-header {
-    background-color: rgb(100, 100, 100);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    z-index: 9998;
-    overflow: visible;
-}
-
-header a {
-    text-decoration: none;
-    color: black;
-}
-
-button {
-    background-color: rgb(100, 100, 100);
-    border: none;
-    border-radius: 10px;
-    font-size: 18px;
-    font-family: 'Courier New', Courier, monospace;
-    cursor: pointer;
-}
-
-button a {
-    color: black;
-    text-decoration: none;
+  display: block;
+  height: auto;
+  max-width: 100%;
 }
 
 h1 {
-    font-style: oblique;
-    text-align: center;
-    margin-top: 80px;
-    color: #333;
-}
-
-.signup-box {
-    max-width: 500px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.input-box {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    font-size: 16px;
-}
-
-input[type="checkbox"] {
-    margin-right: 5px;
+  color: #333;
+  font-style: oblique;
+  margin-top: 80px;
+  text-align: center;
 }
 
 label {
-    font-size: 14px;
-    color: #555;
+  color: #555;
+  font-size: 14px;
+}
+
+/* Button Styling */
+button {
+  background-color: rgb(100, 100, 100);
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 18px;
+}
+
+button a {
+  color: black;
+  text-decoration: none;
 }
 
 button[type="submit"] {
-    background-color: rgb(92, 231, 178);
-    color: black;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
+  background-color: rgb(92, 231, 178);
+  border-radius: 5px;
+  color: black;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 10px 20px;
 }
 
-.right-box {
-    float: right;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(78, 208, 132, 0.859);
+/* Form Inputs */
+.input-box {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 16px;
+  margin-bottom: 15px;
+  padding: 10px;
+  width: 100%;
 }
 
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-}
-
-.search-bar {
-    margin-bottom: 20px;
-    text-align: center;
-    margin-top: 100px;
+input[type="checkbox"] {
+  margin-right: 5px;
 }
 
 input[type="text"] {
-    padding: 10px;
-    width: 60%;
-    height: 22px;
-    margin-right: 5px;
+  height: 22px;
+  margin-right: 5px;
+  padding: 10px;
+  width: 60%;
 }
 
+/* Layout and Containers */
+.container {
+  margin: 20px auto;
+  max-width: 800px;
+}
+
+.signup-box {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  max-width: 500px;
+  padding: 20px;
+}
+
+.right-box {
+  background-color: rgba(78, 208, 132, 0.859);
+  float: right;
+  height: 100%;
+  width: 50%;
+}
+
+/* Header */
+header {
+  background-color: rgb(100, 100, 100);
+  height: 80px;
+  left: 0;
+  overflow: visible;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9998;
+}
+
+header a {
+  color: black;
+  text-decoration: none;
+}
+
+/* Navbar */
 .navbar {
-    overflow: visible;
-    background-color: rgb(100, 100, 100);
-    position: absolute;
-    z-index: 9999;
-  }
-  
-  .navbar a {
-    float: left;
-    font-size: 30px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    min-width: 100px;
-  }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-    z-index: 10000;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 30px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    z-index: 10000;
-    border-radius: 5px;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-    z-index: 10000;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(236, 236, 236);
-    min-width: 200px;
-    border-radius: 10px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 10001;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    z-index: 10000;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-    border-radius: 15px;
-    z-index: 10001;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-    z-index: 10002;
-  }
-  
-  
+  background-color: rgb(100, 100, 100);
+  overflow: visible;
+  position: absolute;
+  z-index: 9999;
+}
+
+.navbar a {
+  border-radius: 5px;
+  color: white;
+  display: inline;
+  float: left;
+  font-size: 30px;
+  min-width: 100px;
+  padding: 14px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+}
+
+.navbar a::after {
+  background-color: rgb(65, 65, 65);
+  bottom: 0;
+  content: '';
+  height: 3px;
+  left: 50%;
+  position: absolute;
+  transition: width 0.25s ease, left 0.2s ease;
+  width: 0;
+}
+
+.navbar a:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+/* Search Bar */
+.search-bar {
+  margin-bottom: 20px;
+  margin-top: 65px;
+  text-align: center;
+}
+
+.navbar .search-bar a {
+  font-size: inherit;
+  height: 25px;
+  min-width: 0px;
+  padding: 0px;
+  position: fixed;
+  width: 25px;
+}
+
+.navbar .search-bar a:hover img {
+  transform: rotateY(180deg);
+}
+
+.navbar .search-bar a img {
+  transition: transform 0.4s ease;
+}
+
+/* Search Glass Hover & Effects */
+.navbar .search-glass {
+  height: 25px;
+  margin: 0;
+  padding: 0;
+  width: 25px;
+}
+
+.navbar .search-glass:hover {
+  background: none;
+  color: white;
+  text-decoration: none;
+}
+
+.navbar .search-glass::after {
+  content: none;
+}
+
+/* Dropdown */
+.dropdown {
+  float: left;
+  overflow: hidden;
+  z-index: 10000;
+}
+
+.dropdown .dropbtn {
+  background-color: inherit;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  font-family: inherit;
+  font-size: 30px;
+  margin: 0;
+  outline: none;
+  padding: 14px 16px;
+  z-index: 10000;
+}
+
+.dropdown .dropbtn::after {
+  content: '';
+  position: absolute;
+  left: 50%; /* Start from center */
+  bottom: 4px; /* Align to bottom */
+  width: 0; /* Start with width 0 */
+  height: 4px; /* Line Thickness */
+  background-color: rgb(65, 65, 65); /* Color of the underline */
+  transition: width 0.25s ease, left 0.2s ease; /* Animation for width and position */
+}
+
+.dropdown:hover .dropbtn::after {
+  width: 100%; /* Expand to full width on hover */
+  left: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+  z-index: 10000;
+}
+
+/* Dropdown Content */
+.dropdown-content {
+  background-color: rgb(236, 236, 236);
+  border-radius: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  display: none;
+  min-width: 200px;
+  overflow: hidden;
+  position: absolute;
+  z-index: 10001;
+}
+
+.dropdown-content a {
+  border-bottom: 3px solid transparent;
+  box-sizing: border-box;
+  color: black;
+  display: block;
+  float: none;
+  height: 80px;
+  padding: 12px 16px;
+  text-align: left;
+  text-decoration: none;
+  transition: border-bottom 0.4s;
+  z-index: 10000;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  border-bottom: rgb(65, 65, 65);
+  border-radius: 15px;
+  z-index: 10001;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  z-index: 10002;
+}
