--- a/ErasmusWebiste/style.css
+++ b/ErasmusWebiste/style.css
@@ -123,7 +123,7 @@ header a {
   display: inline;
   float: left;
   font-size: 30px;
-  min-width: 100px;
+  min-width: 0px;
   padding: 14px 16px;
   position: relative;
   text-align: center;
@@ -134,7 +134,7 @@ header a {
   background-color: rgb(65, 65, 65);
   bottom: 0;
   content: '';
-  height: 3px;
+  height: 5px;
   left: 50%;
   position: absolute;
   transition: width 0.25s ease, left 0.2s ease;
@@ -209,19 +209,19 @@ header a {
 }
 
 .dropdown .dropbtn::after {
+  background-color: rgb(65, 65, 65);
+  bottom: 0px;
   content: '';
+  height: 5px;
+  left: 50%;
   position: absolute;
-  left: 50%; /* Start from center */
-  bottom: 4px; /* Align to bottom */
-  width: 0; /* Start with width 0 */
-  height: 4px; /* Line Thickness */
-  background-color: rgb(65, 65, 65); /* Color of the underline */
-  transition: width 0.25s ease, left 0.2s ease; /* Animation for width and position */
+  transition: width 0.25s ease, left 0.2s ease;
+  width: 0;
 }
 
 .dropdown:hover .dropbtn::after {
-  width: 100%; /* Expand to full width on hover */
   left: 0;
+  width: 100%;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
