--- a/ErasmusWebiste/style.css
+++ b/ErasmusWebiste/style.css
@@ -40,7 +40,7 @@ button a {
 }
 
 button[type="submit"] {
-  background-color: rgb(92, 231, 178);
+  background-color: rgb(255, 46, 46);
   border-radius: 5px;
   color: black;
   cursor: pointer;
@@ -97,6 +97,7 @@ input[type="password"] {
   height: 400px;
   padding: 20px;
   position: relative;
+  user-select: none;
 }
 
 .right-box {
@@ -130,6 +131,7 @@ header a {
   background-color: rgb(100, 100, 100);
   overflow: visible;
   position: absolute;
+  user-select: none;
   z-index: 9999;
 }
 
