--- a/ErasmusWebiste/style.css
+++ b/ErasmusWebiste/style.css
@@ -2,8 +2,13 @@
 body {
   background-color: #f0f0f0;
   font-family: 'Courier New', Courier, monospace;
+  transform: scale(0.75); 
+  transform-origin: top left; /* Scale from the top left corner */
+  width: 133.33%; /* Adjust width to compensate for scaling */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
   margin: 0;
   padding: 0;
+  justify-content: center;
 }
 
 img {
@@ -111,8 +116,6 @@ input[type="password"] {
 header {
   background-color: rgb(100, 100, 100);
   height: 80px;
-  left: 0;
-  overflow: visible;
   position: fixed;
   top: 0;
   width: 100%;
@@ -129,9 +132,17 @@ header a {
 /* Navbar */
 .navbar {
   background-color: rgb(100, 100, 100);
+  display: flex; /* Use flexbox for layout */
+  justify-content: center; /* Center the navbar content */
+  align-items: center; /* Center items vertically */
+  position: relative; /* Change to relative */
   overflow: visible;
-  position: absolute;
-
+  position: relative;
+  max-width: 1100px; 
+  width: 100%;
+  height: 100%;
+  left: -380px;
+  margin: 0 auto;
   user-select: none;
   z-index: 9999;
 }
@@ -147,6 +158,7 @@ header a {
   position: relative;
   text-align: center;
   text-decoration: none;
+  margin: 0 10px;
 }
 
 .navbar a::after {
@@ -173,6 +185,9 @@ header a {
   margin-bottom: 20px;
   margin-top: 65px;
   text-align: center;
+  display: flex; /* Use flexbox for inner layouts */
+  justify-content: space-between; /* Space items evenly */
+  margin: 20px 0;
 }
 
 .navbar .search-bar a {
@@ -265,7 +280,7 @@ header a {
   border-radius: 10px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   display: none;
-  min-width: 200px;
+  min-width: 180px;
   overflow: hidden;
   position: absolute;
   z-index: 10001;
@@ -278,6 +293,7 @@ header a {
   display: block;
   float: none;
   height: 70px;
+  left: -10px;
   padding: 12px 16px;
   text-align: left;
   text-decoration: none;
@@ -289,6 +305,7 @@ header a {
   background-color: #ddd;
   border-bottom: rgb(65, 65, 65);
   border-radius: 15px;
+  width: 200px;
   z-index: 10001;
 }
 
@@ -357,6 +374,7 @@ header a {
   display: block;
   float: none;
   height: 55px;
+  left: -10px;
   padding: 12px 16px;
   text-align: left;
   text-decoration: none;
@@ -367,6 +385,7 @@ header a {
 .dropdown-content_projects a:hover {
   background-color: #ddd;
   border-bottom: rgb(65, 65, 65);
+  width: 200px;
   border-radius: 15px;
   z-index: 10001;
 }
